--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" >
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-feature android:name="android.hardware.camera" />
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+        android:maxSdkVersion="28" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -11,34 +18,17 @@
         android:roundIcon="@mipmap/logo_recraftify"
         android:supportsRtl="true"
         android:theme="@style/Theme.Recraftify"
-        tools:targetApi="31" >
+        tools:targetApi="31"
+        android:usesCleartextTraffic="true">
 
-        <!--
-             TODO: Before you run your application, you need a Google Maps API key.
-
-             To get one, follow the directions here:
-
-                https://developers.google.com/maps/documentation/android-sdk/get-api-key
-
-             Once you have your API key (it starts with "AIza"), define a new property in your
-             project's local.properties file (e.g. MAPS_API_KEY=Aiza...), and replace the
-             "YOUR_API_KEY" string in this file with "${MAPS_API_KEY}".
-        -->
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="YOUR_API_KEY" />
-
-        <activity
-            android:name=".ui.ScanActivity"
-            android:exported="false" />
         <activity
             android:name=".ui.activity.login.LoginActivity"
             android:exported="false" />
         <activity
             android:name=".ui.activity.signup.SignupActivity"
-            android:exported="false" />
-        <activity
-            android:name=".ui.activity.welcome.WelcomeActivity"
             android:exported="false" />
         <activity
             android:name=".ui.activity.SplashScreen"
